--- a/index.html
+++ b/index.html
@@ -9,28 +9,31 @@
   </head>
   <body>
     <main>
-      <form>
-        <div id="result">0</div>
-        <div class="operatoren">
-          <button id="multi">*</button>
-          <button id="teilen">/</button>
-          <button id="minus">-</button>
-          <button id="plus">+</button>
+      <form name="calculator" id="calculator">
+        <div id="display">
+          <div id="result"></div>
+          <div class="operatoren">
+            <div class="button" id="multi">*</div>
+            <div class="button" id="teilen">/</div>
+            <div class="button" id="minus">-</div>
+            <div class="button" id="plus">+</div>
+          </div>
         </div>
         <div class="numbers">
-          <button class="number">.</button>
-          <button class="number">9</button>
-          <button class="number">8</button>
-          <button class="number">7</button>
-          <button class="number">6</button>
-          <button class="number">5</button>
-          <button class="number">4</button>
-          <button class="number">3</button>
-          <button class="number">2</button>
-          <button class="number">1</button>
-          <button class="number">0</button>
-          <button id="getResult">=</button>
-          <button id="c">c</button>
+          <div class="button">&#8592;</div>
+          <div class="button">.</div>
+          <div class="button">9</div>
+          <div class="button">8</div>
+          <div class="button">7</div>
+          <div class="button">6</div>
+          <div class="button">5</div>
+          <div class="button">4</div>
+          <div class="button">3</div>
+          <div class="button">2</div>
+          <div class="button">1</div>
+          <div class="button">0</div>
+          <div class="button" id="getResult">=</div>
+          <div class="button" id="c">c</div>
         </div>
       </form>
     </main>
