--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
+    <title>Very simple calculator with JS</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <main>
+      <!-- Begin of form -->
       <form name="calculator" id="calculator">
         <div id="display">
+          <div id="history"></div>
           <div id="result"></div>
           <div class="operatoren">
             <div class="button" id="multi">*</div>
