--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="numbers">
-          <div class="button">&#8592;</div>
+          <div class="button" id="arrow">&#8592;</div>
           <div class="button">.</div>
           <div class="button">9</div>
           <div class="button">8</div>
