Replace div with button

--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
           <div id="history"></div>
           <div id="result"></div>
           <div class="operatoren">
-            <div class="button" id="multi">*</div>
-            <div class="button" id="teilen">/</div>
-            <div class="button" id="minus">-</div>
-            <div class="button" id="plus">+</div>
+            <button class="button" id="multi">*</button>
+            <button class="button" id="teilen">/</button>
+            <button class="button" id="minus">-</button>
+            <button class="button" id="plus">+</button>
           </div>
         </div>
         <div class="numbers">
-          <div class="button" id="arrow">&#8592;</div>
-          <div class="button">.</div>
-          <div class="button">9</div>
-          <div class="button">8</div>
-          <div class="button">7</div>
-          <div class="button">6</div>
-          <div class="button">5</div>
-          <div class="button">4</div>
-          <div class="button">3</div>
-          <div class="button">2</div>
-          <div class="button">1</div>
-          <div class="button">0</div>
-          <div class="button" id="getResult">=</div>
-          <div class="button" id="c">c</div>
+          <button class="button" id="arrow">&#8592;</button>
+          <button class="button">.</button>
+          <button class="button">9</button>
+          <button class="button">8</button>
+          <button class="button">7</button>
+          <button class="button">6</button>
+          <button class="button">5</button>
+          <button class="button">4</button>
+          <button class="button">3</button>
+          <button class="button">2</button>
+          <button class="button">1</button>
+          <button class="button">0</button>
+          <button class="button" id="getResult">=</button>
+          <button class="button" id="c">c</button>
         </div>
       </form>
     </main>
